--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
     <!-- TAILWIND CSS -->
-    <link rel="stylesheet" href="./assets/css/tailwind.css">
+    <link rel="stylesheet" href="./build/assets/css/tailwind.css">
      <!-- MAIN CSS -->
-    <link rel="stylesheet" href="./assets/css/main.css">
+    <link rel="stylesheet" href="./build/assets/css/main.css">
 </head>
 <body id="login-page" class="grid grid-cols-1 lg:grid-cols-2 md:grid-cols-1 gap-4">
   <div class="flex h-screen items-center justify-center flex-col">
@@ -87,5 +87,5 @@
   </div>
   <div id="toast" class="toast absolute top-6 right-6 hidden"></div>
 </body>
-<script src="./assets/js/main.js"></script>
+<script src="./build/assets/js/main.js"></script>
 </html>
