--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
     <!-- TAILWIND CSS -->
+    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="./build/assets/css/tailwind.css">
      <!-- MAIN CSS -->
     <link rel="stylesheet" href="./build/assets/css/main.css">
